@@ -1,3 +1,7 @@
+2016-03-30  Jean-Louis Martineau <JMartineau@carbonite.com>
+	* recover-src/extract_list.c: Use property from header instead of from
+	  disklist
+
 2016-03-28  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* installcheck/Amanda_Xfer.pl: Validate CRC and part size
 
